--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+Title: Welcome to Zamy's World.
+Description: Want to make myself presense on the internet so when poeple look for me they fid me right away.
